crates/rome_formatter/tests/specs/prettier/typescript/conformance/es6/templates/templateStringWithEmbeddedTypeAssertionOnAdditionES6.ts.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 125
expression: templateStringWithEmbeddedTypeAssertionOnAdditionES6.ts

---
# Input
```js
﻿// @target: ES6
var x = `abc${ <any>(10 + 10) }def`;

```

# Output
```js
// @target: ES6
var x = `abc${ <any>(10 + 10) }def`;

```

# Errors
```
error[SyntaxError]: expected `'}'` but instead found `(`
  ┌─ templateStringWithEmbeddedTypeAssertionOnAdditionES6.ts:2:21
  │
2 │ var x = `abc${ <any>(10 + 10) }def`;
  │                     ^ unexpected


```


